# min-caml

./: .gitignore  .merlin  Makefile  README  README.md  alpha.ml  alpha.mli  anchor.ml  asm.ml  asm.mli  assoc.ml  beta.ml  beta.mli  closure.ml  closure.mli  comp.ml  constfold.ml  dune  elim.ml  emit.ml  emit.mli  id.ml  inline.ml  inline.mli  kNormal.ml  knormal.ml  knormal.mli  lexer.mll  m.ml  main.ml  main.mli  package-lock.json  package.json  parser.mly  pipeline.ml  pipeline.mli  regAlloc.ml  regalloc.ml  run.js  runtime.js  (+10 more)
src/: alpha.ml  alpha.mli  beta.ml  closure.ml  constfold.ml  elim.ml  emit.ml  id.ml  inline.ml  lexer.mll  main.ml  syntax.ml  type.ml  typing.ml
test/: adder.ml  cls-bug.ml  funcomp.ml  toomanyargs.ml
