(env
    (dev
        (flags (:standard -warn-error -A))))

(executable
    (name comp)
    (libraries pipeline)
    (modules comp))

(library
    (name pipeline)
    (c_names float)
    (preprocess (pps ppx_deriving.std))
    (modules (:standard \ comp wasm wasmit adder_closure_ast)))

(ocamllex lexer)
(ocamlyacc parser)
